--- a/timestamp/index.html
+++ b/timestamp/index.html
@@ -1,4 +1,3 @@
-module.exports = `
 <!doctype html>
 <html lang="en">
     <head>
@@ -18,8 +17,8 @@ module.exports = `
                 <ul>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</ul>
             </blockquote>
             <h3>Example usage:</h3>
-            <code>https://timestamp-ms.herokuapp.com/December%2015,%202015</code><br>
-            <code>https://timestamp-ms.herokuapp.com/1450137600</code>
+            <code>/December%2015,%202015</code><br>
+            <code>/1450137600</code>
             <h3>Example output:</h3>
             <code>
                 {
@@ -30,4 +29,3 @@ module.exports = `
         </div>
     </body>
 </html>
-`
