Added header-parser microservice

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     </head>
     <body>
         <div class="container">
-            <h1 class="header">
-                API Projects
-            </h1>
-            <a href="/timestamp">Timestamp microservice</a>
+            <h1 class="header">API Projects</h1>
+            <div>
+                <a href="/timestamp">Timestamp microservice</a>
+            </div>
+            <div>
+                <a href="/header-parser">Request Header Parser Microservice</a>
+            </div>
         </div>
     </body>
 </html>
