--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <div>
                 <a href="/header-parser">Request Header Parser Microservice</a>
             </div>
+            <div>
+                <a href="/url-shortener">URL Shortener Microservice</a>
+            </div>
         </div>
     </body>
 </html>
