Updated url-shortener microservice index page

--- a/url-shortener/index.html
+++ b/url-shortener/index.html
@@ -16,13 +16,10 @@
                 <ul>When I visit that shortened URL, it will redirect me to my original link.</ul>
             </blockquote>
             <h3>Example usage:</h3>
-            <code>/new/https://little-url.herokuapp.com/</code><br>
+            <code>https://api-projects-fcc.herokuapp.com/url-shortener/new/https://www.freecodecamp.com/challenges/url-shortener-microservice</code><br>
             <h3>Example output:</h3>
             <code>
-                {
-                    "original": "https://little-url.herokuapp.com/",
-                    "short": "localhost/rJVgXC2jl",
-                }
+                {"original":"https://www.freecodecamp.com/challenges/url-shortener-microservice","short":"api-projects-fcc.herokuapp.com/url-shortener/Hk4O9Anjg"}
             </code>
         </div>
     </body>
