--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <div>
                 <a href="/url-shortener">URL Shortener Microservice</a>
             </div>
+            <div>
+                <a href="/image-search">Image Search</a>
+            </div>
         </div>
     </body>
 </html>
