--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 <a href="/url-shortener">URL Shortener Microservice</a>
             </div>
             <div>
-                <a href="/image-search">Image Search</a>
+                <a href="/image-search">Image Search Microservice</a>
+            </div>
+            <div>
+                <a href="/file-metadata">File Metadata Microservice</a>
             </div>
         </div>
     </body>
